@@ -1,12 +1,16 @@
 Version 9.2 - xxxx edition. 14 December 2020
 
 Added new ZX-Uno Prism video mode
+
+Improved CPC emulation: scanlines rendering
+Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
+
+TBBlue: Fixed writing on divmmc memory when layer2 active
+
 Fixed loading General Sound rom
 Fixed CPC CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
 Fixed CPC setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request
-Improved CPC emulation: scanlines rendering
 
-TBBlue: Fixed writing on divmmc memory when layer2 active
 
 Version 9.1 - Toi Acid Game edition. 26 November 2020
 
